Tue Jan 13 16:49:38 1998  Ian Lance Taylor  <ian@cygnus.com>

	* acconfig.h (UTIME_EXPECTS_WRITABLE): Add undef line.
	* configure.in: If cygwin32, define UTIME_EXPECTS_WRITABLE.
	* configure, config.h.in: Regenerate.

	* configure.in: Add test for cygwin32, and set LIBOBJS and LIBS
	accordingly.
	* configure: Regenerate.

Sun Jan 11 11:43:55 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* HACKING: Add example of indentation for switch statement.  I
	always have to look this one up, and it seems worthwhile to
	specify it here rather than be unsure which switch statement in
	CVS to use as an example.

Wed Jan  7 09:41:08 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* TODO: Revise item 149 (concerning changing CVS/Root and such).
	"This whole area is a rather bad pile of individual decisions which
	accumulated over time, some of them probably bad decisions with
	hindsight."

Wed Dec 31 09:25:20 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* FAQ: Re-import from FAQ-O-Matic.  Features a change regarding
	removing directories.

Tue Dec 23 08:28:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README.VMS, INSTALL, HACKING, BUGS, README: Change bug-cvs
	address from prep.ai.mit.edu to gnu.org per email from Martin
	Hamilton.  When referring to bug-reporting procedure refer to
	Cederqvist not README.

Tue Dec 16 13:13:53 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* FAQ: Re-import from FAQ-O-Matic.  The content is the same, but
	instead of being from Mosaic, it is from "lynx -dump -nolist".
 	This output is somewhat better (for example, it is formatted for
	80 columns or so, rather than Mosaic which is rather
	inconsistent), and also lynx is free and still maintained whereas
	NCSA Mosaic is proprietary and no longer maintained.

	* FAQ: Re-import from FAQ-O-Matic.  Features an update to the
	Sablime question.

	* NEWS: Add item about GSSAPI.

Fri Dec 12 14:00:57 1997  Ian Lance Taylor  <ian@cygnus.com>
